--- a/contact.html
+++ b/contact.html
@@ -29,19 +29,19 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0 fs-4 text-white">
               <li class="nav-item  pe-3">
-                <a class="nav-link text-white"href="#accueil">Accueil</a>
+                <a class="nav-link text-white"href="index.html">Accueil</a>
               </li>
               <li class="nav-item  pe-3">
                 <a class="nav-link text-white" href="produit.html">Produits</a>
               </li>
               <li class="nav-item pe-3">
-                <a class="nav-link text-white" href="#connexion">Connexion</a>
+                <a class="nav-link text-white" href="connexion.html">Connexion</a>
               </li>
               <li class="nav-item pe-3">
-                <a class="nav-link text-white" href="#inscription">Inscription</a>
+                <a class="nav-link text-white" href="inscription.html">Inscription</a>
               </li>
               <li class="nav-item pe-3">
-                <a class="nav-link text-white" href="#contact">Contact</a>
+                <a class="nav-link text-white" href="contact.html">Contact</a>
               </li>
             </ul>
             <form class="d-flex  " role="search">
@@ -55,31 +55,51 @@
           </div>
         </div>
       </nav>
-      <!-- accueil -->
-      <section id="accueil">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-lg-12">
-            <img src="image/turntable-1109588_640.jpg" class="w-100 h-75"  alt="">
+       <!-- contact -->
+       <section id="contact" >
+        <div class="map">
+          <div class="container text-center py-5">
+            <div class="row">
+              <h2 class="fs-1 fw-bolder text-white">CONTACT US</h2>
+              <p class="text-lighter">Lorem ipsum dolor sit amet consectetur.</p>
+              <div class="col-lg-6 mt-3 ">
+                <div class="mb-3">
+                  <input type="email" class="form-control py-3" id="exampleFormControlInput1" placeholder="Your Name*">
+                </div>
+                <div class="mb-3">
+                  <input type="email" class="form-control py-3" id="exampleFormControlInput1" placeholder="Your Email*">
+                </div>
+                <div class="mb-3">
+                  <input type="email" class="form-control py-3" id="exampleFormControlInput1" placeholder="Your Phone*">
+                </div>
+              </div>
+              <div class="col-lg-6 mt-3">
+                <div class="mb-3">
+                  <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Your Message*" rows="8"></textarea>
+                </div
+              </div>
+            </div>
+          </div>
+          <div class="grif mt-3">
+            <button type="submit" class="btn btn-warning text-light px-3 py-3 fs-4 fw-bolder">SEND MESSAGE</button>
           </div>
         </div>
-      </div>
       </section>
-      <!-- footer -->
-      <section class="bg-secondary py-5">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-md-4">
-            <a class="navbar-brand fs-1" href="#"> <span class="fst-italic text-warning">BOU</span>TIC</a>
-          </div>
-          <div class="col-md-4">
-            <p class="text-light">Copyright © Your Website 2023</p>
-          </div>
-          <div class="col-md-4">
-            <p class="text-light">Privacy Policy Terms of Use</p>
+       <!-- footer -->
+       <section class="bg-secondary py-5">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-md-4">
+              <a class="navbar-brand fs-1" href="#"> <span class="fst-italic text-warning">BOU</span>TIC</a>
+            </div>
+            <div class="col-md-4">
+              <p class="text-light">Copyright © Your Website 2023</p>
+            </div>
+            <div class="col-md-4">
+              <p class="text-light">Privacy Policy Terms of Use</p>
+            </div>
           </div>
         </div>
-      </div>
-      </section>
+        </section>
 </body>
 </html>
