--- a/inscription.html
+++ b/inscription.html
@@ -29,19 +29,19 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0 fs-4 text-white">
               <li class="nav-item  pe-3">
-                <a class="nav-link text-white"href="#accueil">Accueil</a>
+                <a class="nav-link text-white"href="index.html">Accueil</a>
               </li>
               <li class="nav-item  pe-3">
                 <a class="nav-link text-white" href="produit.html">Produits</a>
               </li>
               <li class="nav-item pe-3">
-                <a class="nav-link text-white" href="#connexion">Connexion</a>
+                <a class="nav-link text-white" href="connexion.html">Connexion</a>
               </li>
               <li class="nav-item pe-3">
-                <a class="nav-link text-white" href="#inscription">Inscription</a>
+                <a class="nav-link text-white" href="">Inscription</a>
               </li>
               <li class="nav-item pe-3">
-                <a class="nav-link text-white" href="#contact">Contact</a>
+                <a class="nav-link text-white" href="contact.html">Contact</a>
               </li>
             </ul>
             <form class="d-flex  " role="search">
@@ -55,31 +55,42 @@
           </div>
         </div>
       </nav>
-      <!-- accueil -->
-      <section id="accueil">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-lg-12">
-            <img src="image/turntable-1109588_640.jpg" class="w-100 h-75"  alt="">
+      <!-- inscription -->
+      <section id="inscription" class="text-center my-5 py-5">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-md-6">
+              <h1 class="text-center">Inscrivez-vous</h1>
+              <form method="get" class="text-center">
+                <div class="mb-3">
+                  <input type="text" class="form-control" id="exampleInputName1" aria-describedby="nameHelp" placeholder="Name">
+                </div>
+                <div class="mb-3">
+                  <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="EmailHelp" placeholder="Email">
+                </div>
+                <div class="mb-3">
+                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter your password">
+                </div>
+                <button type="submit" class="btn btn-secondary mt-4 w-50">Submit</button>
+              </form>
           </div>
         </div>
-      </div>
       </section>
-      <!-- footer -->
-      <section class="bg-secondary py-5">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-md-4">
-            <a class="navbar-brand fs-1" href="#"> <span class="fst-italic text-warning">BOU</span>TIC</a>
-          </div>
-          <div class="col-md-4">
-            <p class="text-light">Copyright © Your Website 2023</p>
-          </div>
-          <div class="col-md-4">
-            <p class="text-light">Privacy Policy Terms of Use</p>
+       <!-- footer -->
+       <section class="bg-secondary py-5">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-md-4">
+              <a class="navbar-brand fs-1" href="#"> <span class="fst-italic text-warning">BOU</span>TIC</a>
+            </div>
+            <div class="col-md-4">
+              <p class="text-light">Copyright © Your Website 2023</p>
+            </div>
+            <div class="col-md-4">
+              <p class="text-light">Privacy Policy Terms of Use</p>
+            </div>
           </div>
         </div>
-      </div>
-      </section>
+        </section>
 </body>
 </html>
